<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCredits">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/help"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/helpdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/helpdesc"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/help" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/author"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/helpdesc" />

            <TextView
                android:id="@+id/authorname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/authorname"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/author" />
            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="@string/contact"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/authorname" />
            <TextView
                android:id="@+id/authormail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/authormail"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                app:layout_constraintTop_toBottomOf="@+id/authormail" />

            <Button
                android:id="@+id/button_mainMenu_fromCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0F7F7"
                android:text="Volver"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/logo" />
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_width="match_parent" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>